# slicing

./: Cargo.toml
.github/workflows/: rust.yml
data/: centered_cube_2x2x2.3mf  corner.3mf  corner2.3mf  corner3.3mf
src/: error.rs  geometry.rs  lib.rs  load.rs
src/common/: mod.rs  units.rs
src/geometry/: mod.rs  plane.rs  point.rs  triangle.rs  units.rs  vector.rs
src/threemf/: mesh.rs  mod.rs  model.rs  object.rs  test.rs  xml_parse.rs
web/: Cargo.toml  package-lock.json  package.json
web/js/: index.js  main.js
web/src/: lib.rs
web/static/: index.css  index.html
