cargo-features = ["edition2021"]

[package]
name = "slicing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
euclid = "0.22.6"
thiserror = "1.0.30"
quick-xml = { version = "0.23.0-alpha3", features = ["serialize"] }
serde = { version = "1.0.130", features = ['derive'] }
serde_json = "1.0.68"
zip = { version = "0.5", default-features = false, features = ["deflate"] }
itertools = "0.10.1"